# postagent

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  fly.toml  postagent.db-shm  postagent.db-wal  pyproject.toml  schema.sql
.agents/skills/code-verification/: SKILL.md
.agents/skills/db-migration/: SKILL.md
.agents/skills/e2e-test/: SKILL.md
.agents/skills/postagent-messaging/: SKILL.md
.agents/skills/pr-draft-summary/: SKILL.md
.claude/skills/postagent-messaging/: SKILL.md
.github/workflows/: release.yml
demo/: README.md
demo/alice/: CLAUDE.md
demo/bob/: CLAUDE.md
deploy/: README.md
deploy/broker/: Dockerfile  mosquitto.conf
postagent/: __init__.py
postagent/api/: auth.py  db.py  main.py  models.py  reserved.py
postagent/api/routers/: challenge.py  checkout.py  deregister.py  discover.py  key.py  mqtt_auth.py  register.py  resolve.py  webhook.py
postagent/cli/: main.py
postagent/client/: __init__.py  agent.py  crypto.py  replay.py
scripts/: demo-tmux.sh  dev.sh  e2e-demo.py  format.sh  lint.sh  test.sh  typecheck.sh  verify.sh  wiretap.py
tests/: test_api.py  test_auth.py  test_crypto.py  test_freemium.py  test_mqtt_auth.py  test_replay.py  test_reserved.py
